[package]
name = "near_rpc"
version = "0.1.0"
authors = ["zhiwei-w-luo <zhiwei-luo@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5.0"
base64 = "0.11.0"
derive_more = "0.99.1"
jsonrpc-core = "14.0.0"
log = "0.4.6"
parking_lot = "0.10.0"
rlp = "0.4"
rustc-hex = "2.0.1"
parity-secp256k1 = "0.7.0"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
serde_derive = "1.0"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
tokio-timer = "0.1"
url = "2.1.0"
zeroize = "1.1.0"
futures = "0.1.26"
sha2 = "0.8"
bs58 = "0.3"
near-crypto = { path = "src/crypto" }
borsh = "0.6.1"

# Optional deps
hyper = { version = "0.12.25", optional = true }
hyper-tls = { version = "0.3.2", optional = true }
native-tls = { version = "0.2.2", optional = true }
tokio-core = { version = "0.1.17", optional = true }
tokio-io = { version = "0.1.12", optional = true }
tokio-uds = { version = "0.1.0", optional = true }
websocket = { version = "0.21.1", optional = true }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }


[dev-dependencies]
rand = "0.7"

[features]
default = ["http"]
# TODO [ToDr] move transports to separate crates
http = ["hyper", "tokio-core"]

[[bin]]
path = "examples/status.rs"
name = "example"
